replace base64
from "sun.misc" to "org.apache.commons.codec.binary.Base64"